--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1141,6 +1141,9 @@
     <Compile Include="vwct_cbtecble_con_ctacble_acreedora.cs">
       <DependentUpon>Model_contabilidad.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwcxc_cobro.cs">
+      <DependentUpon>Model_cuentas_por_cobrar.tt</DependentUpon>
+    </Compile>
     <Compile Include="VWCXP_001.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
