--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -135,6 +135,7 @@
     <Compile Include="General\tb_sis_Impuesto_Tipo_Bus.cs" />
     <Compile Include="General\tb_sis_Impuesto_x_ctacble_Bus.cs" />
     <Compile Include="General\tb_sis_reporte_Bus.cs" />
+    <Compile Include="General\tb_sis_reporte_x_seg_usuario_Bus.cs" />
     <Compile Include="General\tb_sucursal_Bus.cs" />
     <Compile Include="General\tb_transportista_Bus.cs" />
     <Compile Include="Inventario\in_CatalogoTipo_Bus.cs" />
