--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -291,6 +291,7 @@
     <Compile Include="Areas\General\Controllers\ProvinciaController.cs" />
     <Compile Include="Areas\General\Controllers\RegionController.cs" />
     <Compile Include="Areas\General\Controllers\ReporteController.cs" />
+    <Compile Include="Areas\General\Controllers\ReportesPorUsuarioController.cs" />
     <Compile Include="Areas\General\Controllers\SucursalController.cs" />
     <Compile Include="Areas\General\Controllers\TipoDocumentoController.cs" />
     <Compile Include="Areas\General\Controllers\TipoDocumentoTalonarioController.cs" />
@@ -8542,6 +8543,8 @@
     <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Anular.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\_GridViewPartial_cobranza.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorCobrarReportes\CXC_001.cshtml" />
+    <Content Include="Areas\General\Views\ReportesPorUsuario\Index.cshtml" />
+    <Content Include="Areas\General\Views\ReportesPorUsuario\_GridViewPartial_reportes_por_usuario.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
