--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Reportes\Facturacion\FAC_001_Bus.cs" />
     <Compile Include="Reportes\Facturacion\FAC_002_Bus.cs" />
     <Compile Include="Reportes\Facturacion\FAC_003_Bus.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_004_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_004_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_005_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_007_Bus.cs" />
