--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -281,6 +281,7 @@
     <Compile Include="Areas\General\Controllers\CatalogoController.cs" />
     <Compile Include="Areas\General\Controllers\CatalogoTipoController.cs" />
     <Compile Include="Areas\General\Controllers\CiudadController.cs" />
+    <Compile Include="Areas\General\Controllers\DisenadorReporteController.cs" />
     <Compile Include="Areas\General\Controllers\EmpresaController.cs" />
     <Compile Include="Areas\General\Controllers\ImagenesController.cs" />
     <Compile Include="Areas\General\Controllers\ImpuestoController.cs" />
@@ -8564,6 +8565,11 @@
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_003.cshtml" />
     <Content Include="Areas\General\Views\ReportesPorUsuarioController\Index.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_004.cshtml" />
+    <Content Include="Areas\General\Views\DisenadorReporte\_GridViewPartial_disenador_reporte.cshtml" />
+    <Content Include="Areas\General\Views\DisenadorReporte\Anular.cshtml" />
+    <Content Include="Areas\General\Views\DisenadorReporte\Index.cshtml" />
+    <Content Include="Areas\General\Views\DisenadorReporte\Modificar.cshtml" />
+    <Content Include="Areas\General\Views\DisenadorReporte\Nuevo.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
