--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1079,6 +1079,9 @@
     <Compile Include="tb_sis_reporte.cs">
       <DependentUpon>Model_general.tt</DependentUpon>
     </Compile>
+    <Compile Include="tb_sis_reporte_diseno.cs">
+      <DependentUpon>Model_general.tt</DependentUpon>
+    </Compile>
     <Compile Include="tb_sis_reporte_x_seg_usuario.cs">
       <DependentUpon>Model_general.tt</DependentUpon>
     </Compile>
