--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -693,8 +693,8 @@
     <Compile Include="Reportes\Contabilidad\CONTA_002_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Data.cs" />
-    <Compile Include="Reportes\CuentasPorCobrar\CXP_002_Data.cs" />
-    <Compile Include="Reportes\CuentasPorCobrar\CXP_002_diario_Data.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_002_Data.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_002_diario_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_diario_Data.cs" />
