--- a/ERP/Core.Erp.Web/Web.config
+++ b/ERP/Core.Erp.Web/Web.config
@@ -78,7 +78,7 @@
       <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DXXRDV.axd" validate="false" />
       <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v17.2, Version=17.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DXQB.axd" validate="false" />
     </httpHandlers>
-    <globalization culture="" uiCulture="" />
+    <globalization uiCulture="es" culture="es-MX" />
     <pages validateRequest="true" clientIDMode="Predictable">
       <namespaces>
         <add namespace="System.Web.UI.WebControls" />
