--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Facturacion\fa_cliente_contactos_Info.cs" />
     <Compile Include="Facturacion\fa_cliente_Info.cs" />
     <Compile Include="Facturacion\fa_cliente_tipo_Info.cs" />
+    <Compile Include="Facturacion\fa_cliente_x_fa_Vendedor_x_sucursal_Info.cs" />
     <Compile Include="Facturacion\fa_formaPago_Info.cs" />
     <Compile Include="Facturacion\fa_PuntoVta_Info.cs" />
     <Compile Include="Facturacion\fa_TerminoPago_Info.cs" />
