--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8590,6 +8590,7 @@
     <Content Include="Areas\Reportes\Views\CuentasPorCobrarReportes\CXC_002.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\TipoCobro\_GridViewPartial_tipo_param.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\Deudas\_GridViewPartial_facturas_con_saldos.cshtml" />
+    <Content Include="Areas\Facturacion\Views\Cliente\_GridViewPartial_fa_vendedor.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
