--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8601,6 +8601,8 @@
     <Content Include="Areas\Banco\Views\TipoNotaBanco\Index.cshtml" />
     <Content Include="Areas\Banco\Views\TipoNotaBanco\_GridViewPartial_tipo_nota.cshtml" />
     <Content Include="Areas\Banco\Views\TipoNotaBanco\Nuevo.cshtml" />
+    <Content Include="Areas\Banco\Views\TipoNotaBanco\Modificar.cshtml" />
+    <Content Include="Areas\Banco\Views\TipoNotaBanco\Anular.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
