--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -103,6 +103,7 @@
       <DependentUpon>Model_activo_fijo.tt</DependentUpon>
     </Compile>
     <Compile Include="Banco\ba_Banco_Cuenta_Data.cs" />
+    <Compile Include="Banco\ba_Caja_Movimiento_x_Cbte_Ban_x_Deposito_Data.cs" />
     <Compile Include="Banco\ba_CatalogoTipo_Data.cs" />
     <Compile Include="Banco\ba_Catalogo_Data.cs" />
     <Compile Include="Banco\ba_Cbte_Ban_Data.cs" />
